--- a/gallery5/gallery5.html
+++ b/gallery5/gallery5.html
@@ -10,39 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
-
-<!-- Include image link -->
-		
-<script>
-function includeHTML() {
-  var z, i, elmnt, file, xhttp;
-  /*loop through a collection of all HTML elements:*/
-  z = document.getElementsByTagName("*");
-  for (i = 0; i < z.length; i++) {
-    elmnt = z[i];
-    /*search for elements with a certain atrribute:*/
-    file = elmnt.getAttribute("w3-include-html");
-    if (file) {
-      /*make an HTTP request using the attribute value as the file name:*/
-      xhttp = new XMLHttpRequest();
-      xhttp.onreadystatechange = function() {
-        if (this.readyState == 4) {
-          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
-          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
-          /*remove the attribute, and call this function once more:*/
-          elmnt.removeAttribute("w3-include-html");
-          includeHTML();
-        }
-      }      
-      xhttp.open("GET", file, true);
-      xhttp.send();
-      /*exit the function:*/
-      return;
-    }
-  }
-};
-</script>
-
 	</head>
 	<body class="is-preload">
 
@@ -71,11 +38,46 @@ function includeHTML() {
 						
 
 								<section id="two">
-																	<div w3-include-html="gallery5_images.html"></div> 
-
-									<script>
-										includeHTML();
-									</script>	
+									<header class="major">
+										<h2>Gallery 5</h2>
+									</header>
+									<div class="posts">
+										<article class="work-item">
+											<a href="gallery5/01.jpg" class="image"><img src="gallery5/01.jpg" alt="" /></a>
+											<h3>Hare</h3>
+											<p>Oil + Info about painting</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/02.jpg" class="image"><img src="gallery5/02.jpg" alt="" /></a>
+											<h3>Stream</h3>
+											<p>Pastel + Info about painting</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/03.jpg" class="image"><img src="gallery5/03.jpg" alt="" /></a>
+											<h3>Fox In Snow</h3>
+											<p>Oil + Info about painting</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/04.jpg" class="image"><img src="gallery5/04.jpg" alt="" /></a>
+											<h3>Clouds Over The Monument</h3>
+											<p>Acrylic + Info about painting</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/05.jpg" class="image"><img src="gallery5/05.jpg" alt="" /></a>
+											<h3>Horse</h3>
+											<p>Oil + Info about painting</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/06.jpg" class="image"><img src="gallery5/06.jpg" alt="" /></a>
+											<h3>River Landscape</h3>
+											<p>Watercolour + Info about painting</p>
+										</article>
+										<article class="work-item">
+											<a href="gallery5/07.jpg" class="image"><img src="gallery5/07.jpg" alt="" /></a>
+											<h3>Road Landscape</h3>
+											<p>Watercolour + Info about painting</p>
+										</article>
+									</div>
 								</section>
 
 						</div>
