--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <p>My reputation as a lanscape and wildlife artist has led to my work being exhibited widely at galleries across the UK including London as well as in France, Germany and America. My paintings have been published as greetings cards, fine art prints and I have illustrated a number of books and magazines.</p>
 
-<p> I am an associate member of  <a href="https://www.railart.co.uk/about.html" target=”_blank”> the Guild of Railway Artists </a>. Formed in 1970, this has allowed artist like myself to depict and publicise railway scenes of the past and present day. This led to one of my largest commissions to date, a large wall mural for the reception area of Ashford International railway station that encompasses a countryside theme of the local area.</p>
+<p> I am an associate member of  <a href="https://www.railart.co.uk/about.html" target=”_blank”> the Guild of Railway Artists </a>. Formed in 1970, this has allowed artists like myself to depict railway scenes of the past and present day. This led my largest commissions to date, a large wall mural for the reception area of Ashford International railway station that showcased a countryside theme of the local area.</p>
 
 <p>As well as English landscapes and nature, while travelling though France I have painted some of the sceneries I experienced and people I met along the way. Hope you enjoy my artwork as much as I enoyed painting them. Please get in contact if you would like to leave a comment or to enquire about purchasing one of my paintings.</p>
 										<!-- <ul class="actions">
