--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 												<li><a href="gallery5/gallery5.html" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
+										<!--<article>
 											<a href="gallery6/gallery6.html" class="image"><img src="images/06.jpg" alt="" /></a>
 											<h3>Gallery 6</h3>
 											<p>Info about Gallery</p>
 											<ul class="actions">
 												<li><a href="gallery6/gallery6.html" class="button">More</a></li>
 											</ul>
-										</article>
+										</article> -->
 									</div>
 								</section>
 
@@ -141,7 +141,7 @@
 												<li><a href="gallery3/gallery3.html">Pastels Gallery</a></li>
 												<li><a href="gallery4/gallery4.html">Railway Gallery</a></li>
 												<li><a href="gallery5/gallery5.html">Humanity Gallery</a></li>
-												<li><a href="gallery6/gallery6.html">Gallery 6</a></li>
+												<!-- <li><a href="gallery6/gallery6.html">Gallery 6</a></li> -->
 									</ul>
 								</nav>
 
