--- a/gallery4/gallery4.html
+++ b/gallery4/gallery4.html
@@ -163,7 +163,7 @@
 												<li><a href="../gallery3/gallery3.html">Pastels Gallery</a></li>
 												<li><a href="gallery4.html">Railway Gallery</a></li>
 												<li><a href="../gallery5/gallery5.html">Humanity Gallery</a></li>
-												<li><a href="../gallery6/gallery6.html">Gallery 6</a></li>
+												<!-- <li><a href="../gallery6/gallery6.html">Gallery 6</a></li> -->
 									</ul>
 								</nav>
 
